--- a/src/DataStreaming.Shared/DataStreaming.Shared.csproj
+++ b/src/DataStreaming.Shared/DataStreaming.Shared.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>ImageRetranslationShared</RootNamespace>
+        <RootNamespace>DataStreaming</RootNamespace>
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
