--- a/src/Networking.Shared.ClientTests/Networking.Shared.ClientTests.csproj
+++ b/src/Networking.Shared.ClientTests/Networking.Shared.ClientTests.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0-preview.1.23110.8"/>
+    </ItemGroup>
+
 </Project>
