--- a/src/DataStreaming.Shared/DataStreaming.Shared.csproj
+++ b/src/DataStreaming.Shared/DataStreaming.Shared.csproj
@@ -8,4 +8,8 @@
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Events\Rtt" />
+    </ItemGroup>
+
 </Project>
