wip(): SingleIntervalHandler (note tested)

--- a/src/Networking.Shared.ClientTests/appsettings.json
+++ b/src/Networking.Shared.ClientTests/appsettings.json
@@ -9,7 +9,8 @@
   "RTTMetering": {
     "Host": "localhost",
     "Port": 60000,
-    "MeteringType": "SingleInterval",
+    "~MeteringType" : "WorkingMode: SinglePacket | AggregationInterval",
+    "MeteringType": "SinglePacket",
     "AggregationInterval": {
       "Interval": 500,
       "PacketSize": null
