--- a/src/Networking.Shared.ClientTests/Networking.Shared.ClientTests.csproj
+++ b/src/Networking.Shared.ClientTests/Networking.Shared.ClientTests.csproj
@@ -8,7 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0-preview.1.23110.8"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0-preview.1.23110.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DataStreaming.Shared\DataStreaming.Shared.csproj" />
     </ItemGroup>
 
 </Project>
