feat(SinglePacketHandler): it works

--- a/src/Networking.Shared.ClientTests/Networking.Shared.ClientTests.csproj
+++ b/src/Networking.Shared.ClientTests/Networking.Shared.ClientTests.csproj
@@ -16,4 +16,10 @@
       <ProjectReference Include="..\DataStreaming.Shared\DataStreaming.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
