--- a/src/Networking.Shared.ClientTests/appsettings.json
+++ b/src/Networking.Shared.ClientTests/appsettings.json
@@ -7,17 +7,17 @@
     }
   },
   "RTTMetering": {
-    "Host": "localhost",
+    "Host": "127.0.0.1",
     "Port": 7000,
     "~MeteringType" : "WorkingMode: SinglePacket | AggregationInterval",
     "MeteringType": "SinglePacket",
     "AggregationInterval": {
       "Interval": 1000,
-      "PacketSize": null
+      "PacketSize": 12
     },
     "SinglePacket": {
-      "Interval": 200,
-      "PacketSize": null
+      "Interval": 1000,
+      "PacketSize": 12
     }
   }
 }
