refactor(): ns names

--- a/src/DataStreaming.Shared/DataStreaming.Shared.csproj
+++ b/src/DataStreaming.Shared/DataStreaming.Shared.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>DataStreaming</RootNamespace>
-        <LangVersion>default</LangVersion>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
 </Project>
