--- a/src/Networking.Shared.ClientTests/appsettings.json
+++ b/src/Networking.Shared.ClientTests/appsettings.json
@@ -10,7 +10,7 @@
     "Host": "127.0.0.1",
     "Port": 7000,
     "~MeteringType": "WorkingMode: SinglePacket | AggregationInterval",
-    "MeteringType": "SinglePacket",
+    "MeteringType": "AggregationInterval",
     "AggregationInterval": {
       "Interval": 1000,
       "PacketSize": 12
